# tq

./: Cargo.toml  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  coverage.yml  geiger.yml  rust-clippy.yml  scorecard.yml
docs/: header.txt  opt-help.txt
src/: main.rs
